# campvis

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.txt  CMakeLists.txt  README.md  update_legal_header.py
application/: CMakeLists.txt  applicationapi.h  campvis.cpp  campvisapplication.cpp  campvisapplication.h  campvispainter.cpp  campvispainter.h  qtjobprocessor.cpp  qtjobprocessor.h
application/bindings/: application.i
application/data/: no_input.tga
application/glsl/: datacontainerinspector.frag  datacontainerinspector_geometryrenderer.frag  meshGeometryRenderer.vert  meshgeometryrenderer.frag
application/gui/: completinglualineedit.cpp  completinglualineedit.h  datacontainerfileloaderwidget.cpp  datacontainerfileloaderwidget.h  datacontainerinspectorcanvas.cpp  datacontainerinspectorcanvas.h  datacontainerinspectorwidget.cpp  datacontainerinspectorwidget.h  datacontainertreewidget.cpp  datacontainertreewidget.h  doubleadjusterwidget.cpp  doubleadjusterwidget.h  loghighlighter.cpp  loghighlighter.h  logviewerwidget.cpp  logviewerwidget.h  luatablewidget.cpp  luatablewidget.h  mainwindow.cpp  mainwindow.h  mdidockarea.cpp  mdidockarea.h  mdifloatingwindow.h  pipelinemdisubwindow.cpp  pipelinemdisubwindow.h  pipelinetreewidget.cpp  pipelinetreewidget.h  propertyeditorwidget.cpp  propertyeditorwidget.h  qtcolortools.cpp  qtcolortools.h  qtdatahandle.h  scriptingwidget.cpp  scriptingwidget.h  visualizationpipelinewidget.cpp  visualizationpipelinewidget.h  visualizationpipelinewrapper.cpp  visualizationpipelinewrapper.h  workflowcontrollerwidget.cpp  workflowcontrollerwidget.h
application/lua/: inspect.lua  luapipelinedemo.lua
application/tools/: bufferinglog.cpp  bufferinglog.h  qtexteditlog.cpp  qtexteditlog.h  qtjobprocessor.cpp  qtjobprocessor.h  treeitem.cpp  treeitem.h
application/ui/: mainwindow.ui
core/: CMakeLists.txt  coreapi.h  gen_converterregistration.h  init.cpp  init.h
core/bindings/: campvis.i
core/classification/: abstracttransferfunction.cpp  abstracttransferfunction.h  genericgeometrytransferfunction.h  geometry1dtransferfunction.cpp  geometry1dtransferfunction.h  geometry2dtransferfunction.cpp  geometry2dtransferfunction.h  simpletransferfunction.cpp  simpletransferfunction.h  tfgeometry1d.cpp  tfgeometry1d.h  tfgeometry2d.cpp  tfgeometry2d.h
core/datastructures/: abstractdata.cpp  abstractdata.h  abstractimagerepresentation.cpp  abstractimagerepresentation.h  cameradata.cpp  cameradata.h  datacontainer.cpp  datacontainer.h  datahandle.cpp  datahandle.h  dataseries.cpp  dataseries.h  facegeometry.cpp  facegeometry.h  genericabstractimagerepresentation.h  genericimagedatalocal.h  genericimagerepresentationlocal.h  genericpointerdata.h  geometrydata.cpp  geometrydata.h  geometrydatacollection.cpp  geometrydatacollection.h  geometrydatafactory.cpp  geometrydatafactory.h  imagedata.cpp  imagedata.h  imagedataconverter.cpp  imagedataconverter.h  imagedatadisk.cpp  imagedatadisk.h  imagedatagl.cpp  imagedatagl.h  imagedatalocal.cpp  imagedatalocal.h  imagedatarendertarget.cpp  imagedatarendertarget.h  imagemappinginformation.cpp  imagemappinginformation.h  imagerepresentationconversioncore.cpp  imagerepresentationconversioncore.h  (+28 more)
core/eventhandlers/: abstracteventhandler.cpp  abstracteventhandler.h  mwheeltonumericpropertyeventhandler.cpp  mwheeltonumericpropertyeventhandler.h  mwheeltonumericpropertyeventlistener.cpp  mwheeltonumericpropertyeventlistener.h  trackballnavigationeventhandler.cpp  trackballnavigationeventhandler.h  trackballnavigationeventlistener.cpp  trackballnavigationeventlistener.h  transfuncwindowingeventhandler.cpp  transfuncwindowingeventhandler.h  transfuncwindowingeventlistener.cpp  transfuncwindowingeventlistener.h
core/glsl/: copyimage.frag  meshGeomteryRenderer.vert  passthroug_deprecated.vert  passthrough.frag  passthrough.vert
core/pipeline/: abstractpipeline.cpp  abstractpipeline.h  abstractprocessor.cpp  abstractprocessor.h  abstractprocessordecorator.cpp  abstractprocessordecorator.h  abstractworkflow.cpp  abstractworkflow.h  autoevaluationpipeline.cpp  autoevaluationpipeline.h  digraphvisualizationpipeline.cpp  digraphvisualizationpipeline.h  pipelineevaluator.cpp  pipelineevaluator.h  pipelinefactory.cpp  pipelinefactory.h  pipelinepainter.cpp  pipelinepainter.h  processordecoratorbackground.cpp  processordecoratorbackground.h  processordecoratorgradient.cpp  processordecoratorgradient.h  processordecoratormasking.cpp  processordecoratormasking.h  processordecoratorshading.cpp  processordecoratorshading.h  processorfactory.cpp  processorfactory.h  raycastingprocessor.cpp  raycastingprocessor.h  slicerenderprocessor.cpp  slicerenderprocessor.h  viewportsplitter.cpp  viewportsplitter.h  visualizationpipeline.cpp  visualizationpipeline.h  visualizationprocessor.cpp  visualizationprocessor.h
core/properties/: abstractproperty.cpp  abstractproperty.h  allproperties.h  buttonproperty.cpp  buttonproperty.h  cameraproperty.cpp  cameraproperty.h  colorproperty.cpp  colorproperty.h  datanameproperty.cpp  datanameproperty.h  floatingpointproperty.h  genericproperty.h  metaproperty.cpp  metaproperty.h  numericproperty.h  optionproperty.h  propertycollection.cpp  propertycollection.h  statusproperty.cpp  statusproperty.h  stringproperty.cpp  stringproperty.h  transferfunctionproperty.cpp  transferfunctionproperty.h
core/tools/: algorithmicgeometry.cpp  algorithmicgeometry.h  concurrenthistogram.h  endianhelper.h  flathierarchymapper.cpp  flathierarchymapper.h  glreduction.cpp  glreduction.h  interval.h  invalidationlevel.h  job.cpp  job.h  (+23 more)
modules/: CMakeLists.txt  gen_pipelineregistration.h  modulesapi.h  pipelinefactory.cpp  pipelinefactory.h  processorfactory.cpp  processorfactory.h  raycasterfactory.cpp  raycasterfactory.h
scripting/: .gitignore  CMakeLists.txt  campvis.i  luapipeline.cpp  luapipeline.h  script.lua  scriptedpipelineregistrar.h  scriptingapi.h  sigslot.i  testapp.cpp  tgt.i  vis.i
test/: CMakeLists.txt  datahandletest.cpp  imageseriestest.cpp  main.cpp  sampletests.cpp  sampletests2.cpp
(+1303 files in other folders)
